# sparkinfer

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EVAL-TRUST.md  README.md
.gittensor/: weights.json
bench/: README.md
bench/configs/targets/: gemma4_q4km_rtx5090.yaml  gemma4_q4km_rtx_spark.yaml  qwen35_q4km_rtx5090.yaml  qwen35_q4km_rtx_spark.yaml
bench/scripts/: README.md  _common.sh  accuracy.sh  accuracy_basket.sh  accuracy_compare.py  bench.sh  eval_corpus.txt  evaluate.sh  gen_eval_prompt.py  label.py  self_consistency.sh  test_basket_preset.sh  test_label.py
csrc/cuda/quant/: dequant_gguf.cu
dashboard/: data.js  data.json
eval/: README.md  pr_eval_bot.py  vast_eval.py
include/sparkinfer/kernels/: quant.h
include/sparkinfer/moe/: engine.h  router.h
kernels/csrc/cuda/attention/: flash_decode_split.cu  rope.cu
kernels/csrc/cuda/fused/: rmsnorm.cu
kernels/csrc/cuda/gemm/: gemv.cu
kernels/csrc/cuda/moe/: expert_ffn_q4k.cu  router.cu
kernels/include/sparkinfer/kernels/: attention.h  fused.h  gemm.h
kernels/tests/: cpu_reference_test.cpp
moe/: README.md
moe/src/: router.cpp
runtime/src/: decode_layer.cpp
runtime/src/models/: qwen35.cpp
src/: engine.cpp  router.cpp
src/models/: qwen35.cpp
